Displayed results with unordered list

--- a/options.html
+++ b/options.html
@@ -8,6 +8,7 @@
     <body>
         <h1>YouTube™ Bookmark Cleaner</h1>
         <button id="scan-button" type="button">Scan</button>
+        <ul id="list"></ul>
         <script src="js/main.js"></script>
         <script src="js/key.js"></script>
         <script src="js/setup.js"></script>
