Added ability to select removed bookmarks
Added delete button

Added deleteBookmarks() function to check if the checkboxes are checked

--- a/options.html
+++ b/options.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>YouTube™ Bookmark Cleaner</h1>
+        <button id="delete-button" type="button">Delete</button>
         <button id="scan-button" type="button">Scan</button>
         <ul id="list"></ul>
         <script src="js/main.js"></script>
