--- a/options.html
+++ b/options.html
@@ -9,7 +9,18 @@
         <h1>YouTube™ Bookmark Cleaner</h1>
         <button id="delete-button" type="button">Delete</button>
         <button id="scan-button" type="button">Scan</button>
-        <ul id="list"></ul>
+        <table>
+            <thead>
+                <tr>
+                    <th><input type="checkbox"></th>
+                    <th>Name</th>
+                    <th>Folder</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody id="tbody">
+            </tbody>
+        </table>
         <script src="js/main.js"></script>
         <script src="js/key.js"></script>
         <script src="js/setup.js"></script>
