--- a/options.html
+++ b/options.html
@@ -6,9 +6,13 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>YouTube™ Bookmark Cleaner</h1>
-        <button id="delete-button" type="button">Delete</button>
-        <button id="scan-button" type="button">Scan</button>
+        <div>
+            <h1>YouTube™ Bookmark Cleaner</h1>
+            <ul>
+                <li><button id="delete-button" type="button">Delete</button></li>
+                <li><button id="scan-button" type="button">Scan</button></li>
+            </ul>
+        </div>
         <table>
             <thead>
                 <tr>
