Added vector icons from Font Awesome
Used Fontello to create a custom icon font which contains four icons:
search, trash, down arrow, up arrow

--- a/options.html
+++ b/options.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8">
         <title>YouTube™ Bookmark Cleaner</title>
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/ybc-icon-font.css">
     </head>
     <body>
         <div>
             <h1>YouTube™ Bookmark Cleaner</h1>
             <ul>
-                <li><button id="delete-button" type="button">Delete</button></li>
-                <li><button id="scan-button" type="button">Scan</button></li>
+                <li><button id="delete-button" type="button"><i class="icon-trash"></i></button></li>
+                <li><button id="scan-button" type="button"><i class="icon-search"></i></button></li>
             </ul>
         </div>
         <table>
