Positioned title and buttons relative to header
Removed inline and float properties with relative and absolute
properties

Removed unordered list for buttons with a wrapping div

--- a/options.html
+++ b/options.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" href="css/ybc-icon-font.css">
     </head>
     <body>
-        <div>
+        <div id="header">
             <h1>YouTube™ Bookmark Cleaner</h1>
-            <ul>
-                <li><button id="delete-button" type="button"><i class="icon-trash"></i></button></li>
-                <li><button id="scan-button" type="button"><i class="icon-search"></i></button></li>
-            </ul>
+            <div id="control-buttons">
+                <button id="delete-button" type="button"><i class="icon-trash"></i></button>
+                <button id="scan-button" type="button"><i class="icon-search"></i></button>
+            </div>
         </div>
         <table>
             <thead>
