Added displaying the table after results found
Initially the table's display property is set to none to hide it. The
property is set to block only when the user performs a scan and there
are results to show.

--- a/options.html
+++ b/options.html
@@ -14,7 +14,7 @@
                 <button id="delete-button" type="button"><i class="icon-trash"></i></button>
             </div>
         </div>
-        <table>
+        <table id="table">
             <thead>
                 <tr>
                     <th><input type="checkbox"></th>
