--- a/options.html
+++ b/options.html
@@ -15,6 +15,12 @@
             </div>
         </div>
         <table id="table">
+            <colgroup>
+                <col id="select-col">
+                <col id="name-col">
+                <col id="folder-col">
+                <col id="date-col">
+            </colgroup>
             <thead>
                 <tr>
                     <th><input type="checkbox"></th>
