Aligned the titles of the columns to the left

--- a/options.html
+++ b/options.html
@@ -24,9 +24,9 @@
             <thead>
                 <tr>
                     <th><input type="checkbox"></th>
-                    <th>Name</th>
-                    <th>Folder</th>
-                    <th>Date</th>
+                    <th class="titled-col">Name</th>
+                    <th class="titled-col">Folder</th>
+                    <th class="titled-col">Date</th>
                 </tr>
             </thead>
             <tbody id="tbody">
