Added selecting and deselecting all bookmarks
Added selectDeselectAll() function to check and uncheck all the
checkboxes. Binded the function to the "change" event of the select-all
checkbox.

--- a/options.html
+++ b/options.html
@@ -23,7 +23,7 @@
             </colgroup>
             <thead>
                 <tr>
-                    <th><input type="checkbox"></th>
+                    <th><input id="select-all" type="checkbox"></th>
                     <th class="titled-col">Name</th>
                     <th class="titled-col">Folder</th>
                     <th class="titled-col">Date</th>
