--- a/options.html
+++ b/options.html
@@ -11,7 +11,9 @@
             <h1>YouTube™ Bookmark Cleaner</h1>
             <div id="control-buttons">
                 <button id="scan-button" type="button"><i class="icon-search"></i></button>
-                <button id="delete-button" type="button"><i class="icon-trash"></i></button>
+                <button id="delete-button" type="button" disabled="true">
+                    <i class="icon-trash"></i>
+                </button>
             </div>
         </div>
         <table id="table">
