Added delete-button toggle from select-all checkbx
Added changing of delete-button's disabled attribute inside
selectDeselectAll() function

--- a/options.html
+++ b/options.html
@@ -11,7 +11,7 @@
             <h1>YouTube™ Bookmark Cleaner</h1>
             <div id="control-buttons">
                 <button id="scan-button" type="button"><i class="icon-search"></i></button>
-                <button id="delete-button" type="button" disabled="true">
+                <button id="delete-button" type="button" disabled>
                     <i class="icon-trash"></i>
                 </button>
             </div>
