--- a/options.html
+++ b/options.html
@@ -10,7 +10,9 @@
         <div id="header">
             <h1>YouTube™ Bookmark Cleaner</h1>
             <div id="control-buttons">
-                <button id="scan-button" type="button"><i class="icon-search"></i></button>
+                <button id="scan-button" class="button-enabled" type="button">
+                    <i class="icon-search"></i>
+                </button>
                 <button id="delete-button" type="button" disabled>
                     <i class="icon-trash"></i>
                 </button>
