Renamed some element ids and their reference vars
Renamed them to make more human readable and to differentiate between
the name of the element and the element's tag name

--- a/options.html
+++ b/options.html
@@ -20,20 +20,20 @@
         </div>
         <table id="table">
             <colgroup>
-                <col id="select-col">
-                <col id="name-col">
-                <col id="folder-col">
-                <col id="date-col">
+                <col id="select-column">
+                <col id="name-column">
+                <col id="folder-column">
+                <col id="date-column">
             </colgroup>
             <thead>
                 <tr>
                     <th><input id="select-all" type="checkbox"></th>
-                    <th class="titled-col">Name</th>
-                    <th class="titled-col">Folder</th>
-                    <th class="titled-col">Date</th>
+                    <th class="titled-column">Name</th>
+                    <th class="titled-column">Folder</th>
+                    <th class="titled-column">Date</th>
                 </tr>
             </thead>
-            <tbody id="tbody">
+            <tbody id="table-body">
             </tbody>
         </table>
         <script src="js/main.js"></script>
