Grouped class values under one attribute

--- a/options.html
+++ b/options.html
@@ -29,7 +29,7 @@
                 <thead>
                     <tr>
                         <th><input id="select-all" type="checkbox"></th>
-                        <th class="sort" data-sort="name" class="titled-column">Name</th>
+                        <th class="titled-column sort" data-sort="name">Name</th>
                         <th class="titled-column">Folder</th>
                         <th class="titled-column">Date</th>
                     </tr>
