Added sorting to the folder and date columns

--- a/options.html
+++ b/options.html
@@ -30,8 +30,8 @@
                     <tr>
                         <th><input id="select-all" type="checkbox"></th>
                         <th class="titled-column sort" data-sort="name">Name</th>
-                        <th class="titled-column">Folder</th>
-                        <th class="titled-column">Date</th>
+                        <th class="titled-column sort" data-sort="folder">Folder</th>
+                        <th class="titled-column sort" data-sort="date">Date</th>
                     </tr>
                 </thead>
                 <tbody class="list" id="table-body">
